adding authentication in swagger doc
